# db-agent

./: .gitignore  README.md  pyproject.toml
db_agent/: agent_app.py  agent_deps.py  agent_models.py  api.py  app_runner.py  bootstrap.py  config.py  factory.py  ports.py  postgres_adapter.py  services.py  sqlalchemy_adapter.py  streamlit_settings.py  tables_list_cache.py  tool_facade.py
scripts/: create_demo_db.py  phase1_demo.py  phase2_tool_demo.py  phase3_agent_demo.py  phase4_cli_demo.py  run_api.py  run_streamlit.py
src/: __init__.py  agent_app.py  agent_deps.py  agent_models.py  api.py  app_runner.py  bootstrap.py  cli.py  config.py  domain.py  factory.py  ports.py  safety.py  services.py  sqlalchemy_adapter.py  sqlite_adapter.py  tool_facade.py  tool_models.py
src/db_agent/: __init__.py  agent_deps.py  api.py  app_runner.py  bootstrap.py  domain.py  factory.py  sqlalchemy_adapter.py  tool_facade.py  tool_models.py
src/db_agent_app/: __init__.py  __main__.py  agent_app.py  agent_deps.py  api.py  app_runner.py  bootstrap.py  cli.py  config.py  factory.py  services.py  tool_facade.py
streamlit_app/: __init__.py  api_client.py  app.py  state.py  ui_components.py
tests/: test_api_phase5.py  test_phase3_smoke.py  test_phase4_smoke.py  test_postgres_smoke.py  test_sqlalchemy_adapter_summaries.py  test_streamlit_api_client.py  test_tables_list_cache.py
