[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.12",
  "pydantic-settings>=2.12",
  "pydantic-ai>=0.0.55",
  "python-dotenv>=1.2.2",
  "sqlalchemy>=2.0.48",
  "fastapi>=0.135.1",
  "pytest>=9.0.2",
]

[project.scripts]
db-agent = "db_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["db_agent", "db_agent.*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore:There is no current event loop:DeprecationWarning:pydantic_ai"
]
