[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-agent"
version = "0.5.0"
description = "Read-only database analyst app with FastAPI and Streamlit frontends"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.12",
  "pydantic-settings>=2.12",
  "pydantic-ai>=0.0.55",
  "python-dotenv>=1.2.2",
  "sqlalchemy>=2.0.48",
  "psycopg[binary]>=3.2",
  "fastapi>=0.135.1",
  "uvicorn>=0.35.0",
  "requests>=2.32.0",
  "streamlit>=1.43.0",
  "pandas>=2.2.0",
  "pytest>=9.0.2",
  "httpx>=0.28.0",
]

[project.scripts]
db-agent = "db_agent.cli:main"
db-agent-streamlit = "scripts.run_streamlit:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["db_agent", "db_agent.*", "streamlit_app", "streamlit_app.*", "scripts", "scripts.*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
  "ignore:There is no current event loop:DeprecationWarning:pydantic_ai"
]
